--- a/themes/elections/assets/scss/style.scss
+++ b/themes/elections/assets/scss/style.scss
@@ -21,3 +21,5 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "home";
 @import "footer";
 @import "forms";
+
+@import "modules/calendar";
