--- a/themes/elections/assets/scss/_global.scss
+++ b/themes/elections/assets/scss/_global.scss
@@ -11,3 +11,18 @@
 		margin: 0 7.6923%;
 	}
 }
+
+.fc {
+
+	table {
+		margin-bottom: 0;
+	}
+
+	.fc-today {
+		background-color: rgba(white, 0.3);
+	}
+}
+
+.fc-event {
+	text-decoration: none;
+}
