--- a/themes/elections/assets/scss/_typography.scss
+++ b/themes/elections/assets/scss/_typography.scss
@@ -15,7 +15,7 @@ body {
 
 h1 {
 	text-transform: uppercase;
-	font-size: 60px;
+	font-size: 4em;
 	letter-spacing: .15em;
 	text-align: center;
 	font-weight: 600;
@@ -25,6 +25,23 @@ h1 {
 		font-size: 5vw;
 		margin: 0.6em 0;
 	}
+}
+
+h2 {
+	font-size: 2.5em;
+}
+
+h3 {
+	font-size: 2em;
+}
+
+h4 {
+	font-size: 1.75em;
+}
+
+h5,
+h5.cmb2-metabox-title {
+	font-size: 1.5em;
 }
 
 p {
