--- a/themes/elections/assets/scss/_forms.scss
+++ b/themes/elections/assets/scss/_forms.scss
@@ -1,5 +1,6 @@
 .single-oae_election,
-.page-request-an-election {
+.page-request-an-election,
+.single-oae_candidate {
 
 	.selectize-input {
 		padding: 5px 8px;
@@ -159,7 +160,7 @@
 	}
 }
 
-.section-candidates {
+.section-add-candidate {
 
 	.cmb2-wrap {
 
@@ -198,6 +199,10 @@
 					margin-right: 0;
 				}
 			}
+		}
+
+		.cmb2-id--oa-candidatescout-spirit {
+			flex-basis: 100%;
 		}
 	}
 }
