--- a/themes/elections/assets/scss/_variables.scss
+++ b/themes/elections/assets/scss/_variables.scss
@@ -1,6 +1,9 @@
-$red: #cf3a43;
-$red-dk: #640813;
-$steel: #36454F;
-$off-white: #E6E7E8;
-$gray-dk: #231F20;
-$blue: #005596;
+$red:       #cf3a43;
+$red-dk:    #640813;
+$steel:     #36454f;
+$off-white: #e6e7e8;
+$gray-dk:   #231f20;
+$blue:      #005596;
+
+$serif: "museo-slab", serif;
+$sans:  "museo-sans", sans-serif;
