--- a/themes/elections/assets/scss/modules/_calendar.scss
+++ b/themes/elections/assets/scss/modules/_calendar.scss
@@ -15,3 +15,18 @@
 		border-color: yellow;
 	}
 }
+
+.fc {
+
+	table {
+		margin-bottom: 0;
+	}
+
+	.fc-today {
+		background-color: rgba(white, 0.3);
+	}
+}
+
+.fc-event {
+	text-decoration: none;
+}
