Responsive, calendar tweaks

--- a/themes/elections/assets/scss/_forms.scss
+++ b/themes/elections/assets/scss/_forms.scss
@@ -60,10 +60,18 @@
 
 				.cmb-th {
 					width: 15%;
+
+					@include bp(phone) {
+						width: 100%;
+					}
 				}
 
 				.cmb-td {
 					width: 85%;
+
+					@include bp(phone) {
+						width: 100%;
+					}
 				}
 			}
 		}
