--- a/themes/elections/assets/scss/style.scss
+++ b/themes/elections/assets/scss/style.scss
@@ -24,3 +24,4 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "print";
 
 @import "modules/calendar";
+@import "modules/stats";
