WIP adult nominations
Setup post type and taxonomies, front end form, display on election templates, submission handler, and council approval page.

--- a/themes/elections/assets/scss/_global.scss
+++ b/themes/elections/assets/scss/_global.scss
@@ -105,3 +105,10 @@ th[role=columnheader]:not(.no-sort):hover:after {
 	visibility: visible;
 	opacity: 1;
 }
+
+button {
+
+	&.active {
+		background-color: #cf253d;
+	}
+}
