--- a/themes/elections/assets/scss/_forms.scss
+++ b/themes/elections/assets/scss/_forms.scss
@@ -1,6 +1,7 @@
 .single-oae_election,
 .page-request-an-election,
 .single-oae_candidate,
+.single-oae_nomination,
 .page-election-team-info {
 
 	.selectize-input {
