Fix council approval JS, relevant "none found" message

--- a/themes/elections/assets/scss/_global.scss
+++ b/themes/elections/assets/scss/_global.scss
@@ -107,6 +107,7 @@ th[role=columnheader]:not(.no-sort):hover:after {
 }
 
 button {
+	transition: 0.3s;
 
 	&.active {
 		background-color: #cf253d;
